--- a/app/assets/stylesheets/_shame.scss
+++ b/app/assets/stylesheets/_shame.scss
@@ -1,7 +1,4 @@
 // clearfix
-.inline {
-    overflow:hidden;
-}
 .no-top-margin{
     margin-top:0;
 }
